--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div id="app" style="height: 100%; width: 100%;"></div>
+    <div id="app"></div>
   </body>
 </html>
